@@ -12,7 +12,6 @@ package org.junit.jupiter.params.provider;
 
 import static java.lang.String.format;
 import static java.util.Arrays.stream;
-import static java.util.stream.Collectors.toList;
 import static org.junit.platform.commons.support.AnnotationSupport.isAnnotated;
 import static org.junit.platform.commons.util.CollectionUtils.isConvertibleToStream;
 
@@ -22,6 +21,7 @@ import java.util.Optional;
 import java.util.function.Predicate;
 import java.util.stream.Stream;
 
+import org.jspecify.annotations.Nullable;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestFactory;
 import org.junit.jupiter.api.TestTemplate;
@@ -53,7 +53,7 @@ class MethodArgumentsProvider extends AnnotationBasedArgumentsProvider<MethodSou
 		return stream(methodNames)
 				.map(factoryMethodName -> findFactoryMethod(testClass, testMethod, factoryMethodName))
 				.map(factoryMethod -> validateFactoryMethod(factoryMethod, testInstance))
-				.map(factoryMethod -> context.getExecutableInvoker().invoke(factoryMethod, testInstance))
+				.map(factoryMethod -> Preconditions.notNull(context.getExecutableInvoker().invoke(factoryMethod, testInstance), () -> "@MethodSource-referenced method [%s] must not return null".formatted(factoryMethod.toGenericString())))
 				.flatMap(CollectionUtils::toStream)
 				.map(ArgumentsUtils::toArguments);
 		// @formatter:on
@@ -80,9 +80,9 @@ class MethodArgumentsProvider extends AnnotationBasedArgumentsProvider<MethodSou
 		Method factoryMethod = findFactoryMethodByFullyQualifiedName(testClass, testMethod, factoryMethodName);
 
 		// Ensure factory method has a valid return type and is not a test method.
-		Preconditions.condition(isFactoryMethod.test(factoryMethod), () -> format(
-			"Could not find valid factory method [%s] for test class [%s] but found the following invalid candidate: %s",
-			originalFactoryMethodName, testClass.getName(), factoryMethod));
+		Preconditions.condition(isFactoryMethod.test(factoryMethod),
+			() -> "Could not find valid factory method [%s] for test class [%s] but found the following invalid candidate: %s".formatted(
+				originalFactoryMethodName, testClass.getName(), factoryMethod));
 
 		return factoryMethod;
 	}
@@ -129,7 +129,7 @@ class MethodArgumentsProvider extends AnnotationBasedArgumentsProvider<MethodSou
 		// If we didn't find an exact match but an explicit parameter list was specified,
 		// that's a user configuration error.
 		Preconditions.condition(!explicitParameterListSpecified,
-			() -> format("Could not find factory method [%s(%s)] in class [%s]", methodName, methodParameters,
+			() -> "Could not find factory method [%s(%s)] in class [%s]".formatted(methodName, methodParameters,
 				className));
 
 		// Otherwise, fall back to the same lenient search semantics that are used
@@ -153,22 +153,21 @@ class MethodArgumentsProvider extends AnnotationBasedArgumentsProvider<MethodSou
 				&& !candidate.equals(testMethod.orElse(null));
 		List<Method> candidates = ReflectionUtils.findMethods(clazz, isCandidate);
 
-		List<Method> factoryMethods = candidates.stream().filter(isFactoryMethod).collect(toList());
+		List<Method> factoryMethods = candidates.stream().filter(isFactoryMethod).toList();
 
 		Preconditions.notEmpty(factoryMethods, () -> {
 			if (candidates.isEmpty()) {
 				// Report that we didn't find anything.
-				return format("Could not find factory method [%s] in class [%s]", factoryMethodName, clazz.getName());
+				return "Could not find factory method [%s] in class [%s]".formatted(factoryMethodName, clazz.getName());
 			}
 			// If we didn't find the factory method using the isFactoryMethod Predicate, perhaps
 			// the specified factory method has an invalid return type or is a test method.
 			// In that case, we report the invalid candidates that were found.
-			return format(
-				"Could not find valid factory method [%s] in class [%s] but found the following invalid candidates: %s",
+			return "Could not find valid factory method [%s] in class [%s] but found the following invalid candidates: %s".formatted(
 				factoryMethodName, clazz.getName(), candidates);
 		});
 		Preconditions.condition(factoryMethods.size() == 1,
-			() -> format("%d factory methods named [%s] were found in class [%s]: %s", factoryMethods.size(),
+			() -> "%d factory methods named [%s] were found in class [%s]: %s".formatted(factoryMethods.size(),
 				factoryMethodName, clazz.getName(), factoryMethods));
 		return factoryMethods.get(0);
 	}
@@ -178,7 +177,7 @@ class MethodArgumentsProvider extends AnnotationBasedArgumentsProvider<MethodSou
 				|| isAnnotated(candidate, TestFactory.class);
 	}
 
-	private static Method validateFactoryMethod(Method factoryMethod, Object testInstance) {
+	private static Method validateFactoryMethod(Method factoryMethod, @Nullable Object testInstance) {
 		Preconditions.condition(
 			factoryMethod.getDeclaringClass().isInstance(testInstance) || ReflectionUtils.isStatic(factoryMethod),
 			() -> format("Method '%s' must be static: local factory methods must be static "
