@@ -10,8 +10,6 @@
 
 package org.junit.platform.launcher.core;
 
-import static java.util.stream.Collectors.toList;
-
 import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Consumer;
@@ -39,7 +37,7 @@ class CompositeTestExecutionListener implements TestExecutionListener {
 		this.eagerTestExecutionListeners = this.testExecutionListeners.stream() //
 				.filter(EagerTestExecutionListener.class::isInstance) //
 				.map(EagerTestExecutionListener.class::cast) //
-				.collect(toList());
+				.toList();
 	}
 
 	@Override
@@ -111,7 +109,7 @@ class CompositeTestExecutionListener implements TestExecutionListener {
 			}
 			catch (Throwable throwable) {
 				UnrecoverableExceptions.rethrowIfUnrecoverable(throwable);
-				logger.warn(throwable, () -> String.format("TestExecutionListener [%s] threw exception for method: %s",
+				logger.warn(throwable, () -> "TestExecutionListener [%s] threw exception for method: %s".formatted(
 					listener.getClass().getName(), description.get()));
 			}
 		});
