@@ -22,11 +22,12 @@ import static org.junit.platform.engine.discovery.DiscoverySelectors.selectFile;
 import static org.junit.platform.engine.discovery.DiscoverySelectors.selectIteration;
 import static org.junit.platform.engine.discovery.DiscoverySelectors.selectMethod;
 import static org.junit.platform.engine.discovery.DiscoverySelectors.selectPackage;
+import static org.junit.platform.engine.discovery.DiscoverySelectors.selectUniqueId;
 import static org.junit.platform.engine.discovery.DiscoverySelectors.selectUri;
 
 import java.io.File;
 import java.net.URI;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -36,6 +37,7 @@ import org.junit.jupiter.api.Test;
 import org.junit.platform.commons.PreconditionViolationException;
 import org.junit.platform.console.options.TestDiscoveryOptions;
 import org.junit.platform.engine.Filter;
+import org.junit.platform.engine.UniqueId;
 import org.junit.platform.engine.discovery.ClassNameFilter;
 import org.junit.platform.engine.discovery.ClassSelector;
 import org.junit.platform.engine.discovery.ClasspathResourceSelector;
@@ -46,6 +48,7 @@ import org.junit.platform.engine.discovery.IterationSelector;
 import org.junit.platform.engine.discovery.MethodSelector;
 import org.junit.platform.engine.discovery.PackageNameFilter;
 import org.junit.platform.engine.discovery.PackageSelector;
+import org.junit.platform.engine.discovery.UniqueIdSelector;
 import org.junit.platform.engine.discovery.UriSelector;
 import org.junit.platform.launcher.LauncherDiscoveryRequest;
 
@@ -73,7 +76,7 @@ class DiscoveryRequestCreatorTests {
 	@Test
 	void convertsScanClasspathOptionWithExplicitRootDirectories() {
 		options.setScanClasspath(true);
-		options.setSelectedClasspathEntries(List.of(Paths.get("."), Paths.get("..")));
+		options.setSelectedClasspathEntries(List.of(Path.of("."), Path.of("..")));
 
 		var request = convert();
 
@@ -87,7 +90,7 @@ class DiscoveryRequestCreatorTests {
 	@Test
 	void convertsScanClasspathOptionWithAdditionalClasspathEntries() {
 		options.setScanClasspath(true);
-		options.setAdditionalClasspathEntries(List.of(Paths.get("."), Paths.get("..")));
+		options.setAdditionalClasspathEntries(List.of(Path.of("."), Path.of("..")));
 
 		var request = convert();
 
@@ -219,6 +222,21 @@ class DiscoveryRequestCreatorTests {
 	}
 
 	@Test
+	void propagatesUniqueIdSelectors() {
+		options.setSelectedUniqueId(List.of(selectUniqueId("[engine:a]/[1:1]"), selectUniqueId("[engine:b]/[2:2]")));
+
+		var request = convert();
+		var uriSelectors = request.getSelectorsByType(UniqueIdSelector.class);
+
+		assertThat(uriSelectors) //
+				.extracting(UniqueIdSelector::getUniqueId) //
+				.containsExactly( //
+					UniqueId.parse("[engine:a]/[1:1]"), //, //
+					UniqueId.parse("[engine:b]/[2:2]") //
+				);
+	}
+
+	@Test
 	void propagatesUriSelectors() {
 		options.setSelectedUris(List.of(selectUri("a"), selectUri("b")));
 
@@ -329,7 +347,6 @@ class DiscoveryRequestCreatorTests {
 	}
 
 	@Test
-	@SuppressWarnings("deprecation")
 	void convertsConfigurationParameters() {
 		options.setScanClasspath(true);
 		options.setConfigurationParameters(mapOf(entry("foo", "bar"), entry("baz", "true")));
@@ -337,13 +354,11 @@ class DiscoveryRequestCreatorTests {
 		var request = convert();
 		var configurationParameters = request.getConfigurationParameters();
 
-		assertThat(configurationParameters.size()).isEqualTo(2);
 		assertThat(configurationParameters.get("foo")).contains("bar");
 		assertThat(configurationParameters.getBoolean("baz")).contains(true);
 	}
 
 	@Test
-	@SuppressWarnings("deprecation")
 	void convertsConfigurationParametersResources() {
 		options.setScanClasspath(true);
 		options.setConfigurationParameters(mapOf(entry("foo", "bar"), entry("com.example.prop.first", "baz")));
@@ -352,7 +367,6 @@ class DiscoveryRequestCreatorTests {
 		var request = convert();
 		var configurationParameters = request.getConfigurationParameters();
 
-		assertThat(configurationParameters.size()).isEqualTo(2);
 		assertThat(configurationParameters.get("foo")).contains("bar");
 		assertThat(configurationParameters.get("com.example.prop.first")).contains("baz");
 		assertThat(configurationParameters.get("com.example.prop.second")).contains("second value");
